@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession
{
    + static getInstance()
    + getCurrentSession()
}

class UserSession
{
    + getUserEmail()
}

class Agency {
    - Integer id
    - String designation
    - String location
    - String emailAddress
    - String phoneNumber

    + Store(id, designation, \nlocation, emailAddress, \nphoneNumber, registeredBy)
}

class Organization {
    - String description
    - addAgency(store)
    - validateAgency(store)
    + registerAgency(id, designation, location, \nemailAddress, phoneNumber)
    '+ saveAgency(agency)
    + Organization(description)
    - getAdministratorByEmail(email)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getCompanyRepository()
}

class RegisterAgencyController {
    + RegisterAgencyController(organizationRepository)
    + registerStore(id, designation, location, \nemailAddress, phoneNumber)
    - getAdministratorFromSession()
}

class OrganizationRepository{
    +getOrganizationByAdministrator(administrator)
}

class Administrator{
    - name
    - ccNumber
    - taxNumber
    - address
    - email
    - phoneNumber
}

Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

RegisterStoreUI .> RegisterAgencyController

RegisterAgencyController .> Repositories : repositories

Repositories -> "1" OrganizationRepository

RegisterAgencyController ..> OrganizationRepository : companyRepository
OrganizationRepository "1" --> "*" Organization : company
ApplicationSession --> "1" UserSession : userSession

RegisterAgencyController ..> "1" Organization : company
RegisterAgencyController ..> ApplicationSession
RegisterAgencyController ..> UserSession
Store --> Administrator : registeredBy
Organization "1" --> "*" Agency : has
Administrator "1" --> "*" Organization : administrates



@enduml